# blt-multi-connector

./: .gitignore  README.md  pyproject.toml
blt_multi/: __init__.py  calibration.py  cli.py  daemon.py  discovery.py  errors.py  models.py  pairing.py  runner.py  sinks.py  store.py
blt_multi/web/: __init__.py  app.py
blt_multi/web/static/: style.css
blt_multi/web/templates/: _devices.html  index.html
setup/: configure-pipewire.sh  install.sh  test-bluetooth.sh
systemd/: blt-multi.service  install-service.sh
tests/: conftest.py  test_discovery.py  test_models.py  test_sinks.py  test_store.py
